LHForms intial version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-Smeg
 
 <td-message
-  label="Error"
-  sublabel="Something went wrong"
-  color="warn"
-  icon="error"
+  label="Information"
+  sublabel="Proof of concept"
+  color="accent"
+  icon="information"
 ></td-message>
+
+
+<div #myFormContainer ></div>
