--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h2 mat-card-title>Form Preview</h2>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>
+            <h2 mat-card-title>Form Preview</h2>
+        </mat-card-title>
+    </mat-card-header>
+
 <td-message
   label="Information"
   sublabel="Proof of concept"
@@ -6,5 +12,18 @@
   icon="information"
 ></td-message>
 
+<mat-tab-group (selectedTabChange)="changedTab($event)">
+    <mat-tab label="Detail">
+        <span *ngIf="currentTab == 0 && questionnaire !== null">
+            <app-form-detail [formDefinition]="questionnaire"></app-form-detail>
+        </span>
+    </mat-tab>
+    <mat-tab label="Preview">
+         <span *ngIf="currentTab == 1 && questionnaire !== null">
+             <app-lhc-form [formDefinition]="questionnaire"></app-lhc-form>
+         </span>
+    </mat-tab>
 
-<div #myFormContainer ></div>
+</mat-tab-group>
+</mat-card>
+
