--- a/src/app/form-detail-node/form-detail-node.component.scss
+++ b/src/app/form-detail-node/form-detail-node.component.scss
@@ -1,3 +1,29 @@
 :host {
   width: 100%;
 }
+
+table {
+  box-shadow: none;
+}
+
+.example-action-buttons {
+  padding-bottom: 20px;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mat-expansion-panel {
+  background-color: #ffffff;
+  border: #ffffff;
+}
+
+.example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
+  margin-left: 8px;
+}
+
+.icon-display {
+  transform: scale(0.7);
+}
