--- a/src/app/form-detail-node/form-detail-node.component.html
+++ b/src/app/form-detail-node/form-detail-node.component.html
@@ -55,15 +55,53 @@
         <td>link Id</td>
         <td>{{item?.linkId}}</td>
       </tr>
+    <tr *ngIf="item?.answerOption !== undefined">
+        <td>Answers
+        </td>
+        <td>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
 
+                <ng-container matColumnDef="code">
+                    <th mat-header-cell *matHeaderCellDef> Code </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.valueCoding.code}}
+                       <!-- <span *ngIf="element.valueCoding !== undefined">
+                            <app-concept-display [coding]="element.valueCoding" codeOnly=true></app-concept-display>
+                        </span> -->
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="display">
+                    <th mat-header-cell *matHeaderCellDef> Display </th>
+                    <td mat-cell *matCellDef="let element"> <span >
+                        {{element.valueCoding.display}}
+                    </span> </td>
+                </ng-container>
+                <ng-container matColumnDef="codesystem">
+                    <th mat-header-cell *matHeaderCellDef> Code System </th>
+                    <td mat-cell *matCellDef="let element"> <span *ngIf="true">
+                        {{element.valueCoding.system}}
+                    </span> </td>
+                </ng-container>
+                <ng-container matColumnDef="initial">
+                    <th mat-header-cell *matHeaderCellDef> Default </th>
+                    <td mat-cell *matCellDef="let element"> <span *ngIf="element.initialSelected !== undefined && element.initialSelected ">
+                        <mat-icon color="accent">done</mat-icon>
+                    </span> </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </td>
+    </tr>
 
-    <tr *ngIf="item?.definition !== undefined">
+    <tr *ngIf="item?.definition !== undefined || item?.code !== undefined">
       <td>Data Extraction - HL7 FHIR Resource Mapping</td>
       <td>
         <pre>{{getFHIR(item)}}</pre>
       </td>
     </tr>
-    <tr *ngIf="item?.definition !== undefined &&item?.code !== undefined ">
+    <tr *ngIf="item?.definition !== undefined || item?.code !== undefined ">
       <td>Data Extraction - HL7 v2 Segment Mapping (2.5.1)</td>
       <td>
         OBX-2 - Value Type <br/><br/>
