Added item view as json and concept viewer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <td-message
       label="Information"
       sublabel="Proof of concept"
-      color="accent"
+      color="primary"
       icon="information"
     ></td-message>
 
