--- a/src/app/form-detail-node/form-detail-node.component.scss
+++ b/src/app/form-detail-node/form-detail-node.component.scss
@@ -2,6 +2,14 @@
   width: 100%;
 }
 
+.mat-expansion-panel-header-description, .mat-expansion-panel-header-title {
+  flex-basis: 0;
+}
+.mat-expansion-panel-header-description {
+  display: flex;
+  justify-content: space-between;
+}
+
 table {
   box-shadow: none;
 }
