--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -1,19 +1,101 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-    <!-- This is the tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-        <!-- use a disabled button to provide padding for tree leaf -->
-        <button mat-icon-button disabled></button>
-        <app-form-detail-node [setItem]="node.data" [setQuestionnaire]="questionnaire"></app-form-detail-node>
-    </mat-tree-node>
-    <!-- This is the tree node template for expandable nodes -->
-    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-        <button mat-icon-button matTreeNodeToggle
-                [attr.aria-label]="'Toggle ' + node.name">
-            <mat-icon class="mat-icon-rtl-mirror">
-                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-            </mat-icon>
-        </button>
-        <app-form-detail-node [setItem]="node.data" [setQuestionnaire]="questionnaire"></app-form-detail-node>
-    </mat-tree-node>
-</mat-tree>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>
+            <span [style.paddingLeft.px]="40"> Question/Name </span>
+        </th>
+        <td mat-cell *matCellDef="let node">
+            <button mat-icon-button
+                    [style.visibility]="!node.expandable ? 'hidden' : ''"
+                    [style.marginLeft.px]="node.level * 32"
+                    (click)="treeControl.toggle(node)">
+                <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                </mat-icon>
+            </button>
 
+           {{node.item.prefix}} {{node.name}}
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <td mat-cell *matCellDef="let node">
+            <mat-chip-set aria-label="Item Type">
+                <mat-chip>{{ node.item.type }}</mat-chip>
+            </mat-chip-set>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="enabled">
+        <th mat-header-cell *matHeaderCellDef> Enable </th>
+        <td mat-cell *matCellDef="let node">
+              <span *ngFor="let when of node.item.enableWhen">
+                <i>{{getQuestion(when.question)}}</i>&nbsp;{{when.operator}}&nbsp;{{when.answerBoolean}}
+                  <span *ngIf="when.answerCoding !== undefined">
+                      {{when.answerCoding.code}}
+                  </span>
+                  <br/>
+              </span>
+
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="answer">
+        <th mat-header-cell *matHeaderCellDef> Answer </th>
+        <td mat-cell *matCellDef="let node">
+                        <span *ngIf="node.item?.readOnly">
+                            <mat-chip>read only</mat-chip>
+                        </span>
+
+            <span *ngIf="node.item?.maxLength != undefined">
+                            <mat-chip>max length = {{node.item?.maxLength}}</mat-chip>
+                        </span>
+            <span *ngIf="getUnits(node.item) !== ''">
+              &nbsp;
+              Units: {{getUnits(node.item)}}
+          </span>
+            <span *ngIf="node.item.answerValueSet !== undefined">
+                ValueSet: <a [href]="node.item.answerValueSet" target="_blank">{{getAnswerValueSet(node.item)}}</a>
+            </span>
+
+            <span *ngIf="node.item.answerOption !== undefined">
+                <app-form-answer [setItem]="node.item"></app-form-answer>
+             </span>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="required">
+        <th mat-header-cell *matHeaderCellDef> Required </th>
+        <td mat-cell *matCellDef="let node">
+           {{node.item.required}}
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="repeats">
+        <th mat-header-cell *matHeaderCellDef> Repeats </th>
+        <td mat-cell *matCellDef="let node">
+            {{node.item.repeats}}
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="fhir">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let node">
+            <button mat-icon-button (click)="showMapping(node.item)">
+                <mat-icon>map</mat-icon>
+            </button>
+            <button mat-icon-button (click)="showCode(node.item)">
+                <mat-icon>code</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="coding">
+        <th mat-header-cell *matHeaderCellDef> Code </th>
+        <td mat-cell *matCellDef="let node">
+            <p *ngFor="let code of node.item.code">
+                <a mat-button color="primary" *ngIf="code.system == 'http://snomed.info/sct'" (click)="showSNOMED(code)">{{ getCoded(node.item) }} </a>
+                <a *ngIf="code.system == 'http://loinc.org'" target="_blank" [href]="'https://loinc.org/'+getCoded(node.item)">LOINC {{ getCoded(node.item) }} </a>
+            </p>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
