--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -62,27 +62,28 @@
         </td>
     </ng-container>
     <ng-container matColumnDef="required">
-        <th mat-header-cell *matHeaderCellDef> Required </th>
+        <th mat-header-cell *matHeaderCellDef class="small-col"> Req. </th>
         <td mat-cell *matCellDef="let node">
            {{node.item.required}}
         </td>
     </ng-container>
     <ng-container matColumnDef="repeats">
-        <th mat-header-cell *matHeaderCellDef> Repeats </th>
+        <th mat-header-cell *matHeaderCellDef class="small-col"> Repeats </th>
         <td mat-cell *matCellDef="let node">
             {{node.item.repeats}}
         </td>
     </ng-container>
 
     <ng-container matColumnDef="fhir">
-        <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let node">
-            <button mat-icon-button (click)="showMapping(node.item)">
-                <mat-icon>map</mat-icon>
-            </button>
+        <th mat-header-cell *matHeaderCellDef class="link-col"> </th>
+        <td mat-cell *matCellDef="let node" >
             <button mat-icon-button (click)="showCode(node.item)">
                 <mat-icon>code</mat-icon>
             </button>
+            <button *ngIf="node.item.code !== undefined" mat-icon-button (click)="showMapping(node.item)">
+                <mat-icon>map</mat-icon>
+            </button>
+
         </td>
     </ng-container>
 
