--- a/src/app/form-detail/form-detail.component.scss
+++ b/src/app/form-detail/form-detail.component.scss
@@ -1,4 +1,11 @@
-
+.small-col {
+  width: 5%;
+  max-width: 5%;
+}
+.small-col {
+  width: 10%;
+  max-width: 10%;
+}
 
 example-tree-invisible {
   display: none;
