--- a/src/app/diaglog/code-dialog/code-dialog.component.html
+++ b/src/app/diaglog/code-dialog/code-dialog.component.html
@@ -3,5 +3,5 @@
   <pre>{{ jsonItem }}</pre>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
+  <button color = "primary" mat-button mat-dialog-close cdkFocusInitial>OK</button>
 </mat-dialog-actions>
