--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,5 @@ $theme: mat.define-light-theme(
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-tooltip-white {   color: white !important; }
