--- a/src/app/diaglog/concept-popup/concept-popup.component.html
+++ b/src/app/diaglog/concept-popup/concept-popup.component.html
@@ -124,5 +124,5 @@
    </table>
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button color = "primary" mat-button mat-dialog-close>Close</button>
+    <button color = "primary" mat-button mat-dialog-close>OK</button>
 </mat-dialog-actions>
