--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,32 +5,37 @@
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <a mat-menu-item href="https://termbrowser.nhs.uk/" target="_blank">NHS England SNOMED CT Browser</a>
-    <a mat-menu-item href="https://ontoserver.csiro.au/shrimp/?concept=138875005&valueset=http%3A%2F%2Fsnomed.info%2Fsct%3Ffhir_vs&fhir=https%3A%2F%2Fontology.nhs.uk%2Fauthoring%2Ffhir" target="_blank">NHS England Ontology Server (Shrimp)</a>
-    <button mat-menu-item [matMenuTriggerFor]="tools">Tools</button>
-    <button mat-menu-item [matMenuTriggerFor]="implementationGuide">HL7 Implementation Guides</button>
-    <button mat-menu-item [matMenuTriggerFor]="informatics">Information Models</button>
+      <a mat-menu-item target="_blank" href="https://formbuilder.nlm.nih.gov/">NLM Form Builder (US)</a>
+      <a mat-menu-item target="_blank" href="https://project-wildfyre.github.io/formbuilder-lhcforms/">NLM Form Builder (UK Experimental)</a>
+    <button mat-menu-item [matMenuTriggerFor]="tools">Terminology</button>
+      <button mat-menu-item [matMenuTriggerFor]="informatics">Information Models</button>
+      <button mat-menu-item [matMenuTriggerFor]="businessIG">Clinical Process Focused Implementation Guides</button>
+      <button mat-menu-item [matMenuTriggerFor]="technicalIG">Technical Implementation Guides</button>
   </mat-menu>
-  <mat-menu #implementationGuide="matMenu">
-      <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/sdc/">HL7 Structured Data Capture</a>
-    <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/fhir-ipa/">HL7 Internation Patient Access (Query API)</a>
-    <a mat-menu-item target="_blank" href="https://simplifier.net/guide/clinicalobservations">NHS England Clinical Observations</a>
+  <mat-menu #businessIG="matMenu">
     <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/physical-activity/">HL7 Physical Activity (US)</a>
     <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/fhir-sdoh-clinicalcare">HL7 Social Determinents of Health Clinical Care (US)</a>
   </mat-menu>
+    <mat-menu #technicalIG="matMenu">
+        <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/sdc/">HL7 Structured Data Capture</a>
+        <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/fhir-ipa/">HL7 Internation Patient Access (Query API)</a>
+    </mat-menu>
   <mat-menu #tools="matMenu">
-    <a mat-menu-item target="_blank" href="https://formbuilder.nlm.nih.gov/">NLM Form Builder (US)</a>
+      <a mat-menu-item href="https://termbrowser.nhs.uk/" target="_blank">NHS England SNOMED CT Browser</a>
+      <a mat-menu-item href="https://ontoserver.csiro.au/shrimp/?concept=138875005&valueset=http%3A%2F%2Fsnomed.info%2Fsct%3Ffhir_vs&fhir=https%3A%2F%2Fontology.nhs.uk%2Fauthoring%2Ffhir" target="_blank">NHS England Ontology Server (Shrimp)</a>
   </mat-menu>
   <mat-menu #informatics="matMenu">
-    <a mat-menu-item target="_blank" href="https://simplifier.net/guide/uk-core-implementation-guide-stu2">HL7 UK Core STU2</a>
+
     <a mat-menu-item target="_blank" href="https://theprsb.org/standards/">Professional Record Standards Body</a>
     <a mat-menu-item target="_blank" href="https://ckm.openehr.org/ckm/">openEHR Clinical Knowledge Manager</a>
+      <a mat-menu-item target="_blank" href="https://simplifier.net/guide/clinicalobservations">NHS England Clinical Observations</a>
+      <a mat-menu-item target="_blank" href="https://simplifier.net/guide/uk-core-implementation-guide-stu2">HL7 UK Core STU2</a>
   </mat-menu>
 </mat-toolbar>
 <mat-card>
   <mat-card-content>
-      <table>
-      <tr *ngIf="questionnaire?.code !== undefined">
+      <table [style.width]="'100%;'">
+      <tr>
           <td> <h3>Code</h3></td>
           <td>
           <p *ngFor="let code of questionnaire?.code">
@@ -38,14 +43,18 @@
                 <a *ngIf="code.system == 'http://loinc.org'" target="_blank" [href]="'https://loinc.org/'+appSerivce.getCoded(questionnaire?.code)">LOINC {{ appSerivce.getCoded(questionnaire?.code) }} </a>
             </p>
           </td>
+          <td><h3>Publisher</h3></td>
+          <td>
+              {{questionnaire?.publisher}}
+          </td>
       </tr>
-      <tr *ngIf="questionnaire?.description !== undefined">
+      <tr>
         <td><h3>Description</h3></td>
         <td><td-markdown [content]="getDescription()"></td-markdown></td>
-        </tr>
-      <tr *ngIf="questionnaire?.publisher !== undefined">
-        <td><h3>Publisher</h3></td>
-          <td>{{questionnaire?.publisher}}</td>
+          <td><h3>Status</h3></td>
+          <td>
+              {{questionnaire?.status}}
+          </td>
         </tr>
       </table>
     <td-message
