--- a/src/app/form-answer/form-answer.component.html
+++ b/src/app/form-answer/form-answer.component.html
@@ -3,7 +3,7 @@
         <mat-panel-title> Answers </mat-panel-title>
 
     </mat-expansion-panel-header>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
 
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef> Code </th>
