--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -1,20 +1,34 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" >
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>
             <span [style.paddingLeft.px]="40"> Question/Name </span>
         </th>
         <td mat-cell *matCellDef="let node">
-            <button mat-icon-button
-                    [style.visibility]="!node.expandable ? 'hidden' : ''"
-                    [style.marginLeft.px]="node.level * 32"
-                    (click)="treeControl.toggle(node)">
-                <mat-icon class="mat-icon-rtl-mirror">
-                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-                </mat-icon>
-            </button>
-            <span>{{node.item.prefix}} {{node.name}}</span>
+            <table >
+                <tr>
+                    <td>
+                        <button mat-icon-button
+                                [style.visibility]="!node.expandable ? 'hidden' : ''"
+                                [style.marginLeft.px]="node.level * 32"
+                                (click)="treeControl.toggle(node)">
+                            <mat-icon class="mat-icon-rtl-mirror">
+                                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                            </mat-icon>
+                        </button>
+                    </td>
+                 <td>
+                {{node.item.prefix}} {{node.name}}
+
+                <p *ngFor="let code of node.item.code">
+                    <a mat-button color="primary" *ngIf="code.system == 'http://snomed.info/sct'" (click)="appService.showSNOMED(code)">{{ appService.getCoded(node.item.code) }} </a>
+                    <a *ngIf="code.system == 'http://loinc.org'" target="_blank" [href]="'https://loinc.org/'+appService.getCoded(node.item.code)">LOINC {{ appService.getCoded(node.item.code) }} </a>
+                </p>
+            </td>
+                </tr>
+            </table>
         </td>
     </ng-container>
+
 
     <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> Type </th>
@@ -61,20 +75,20 @@
         </td>
     </ng-container>
     <ng-container matColumnDef="required">
-        <th mat-header-cell *matHeaderCellDef class="small-col"> Req. </th>
+        <th mat-header-cell *matHeaderCellDef> Req. </th>
         <td mat-cell *matCellDef="let node">
            {{node.item.required}}
         </td>
     </ng-container>
     <ng-container matColumnDef="repeats">
-        <th mat-header-cell *matHeaderCellDef class="small-col"> Repeats </th>
+        <th mat-header-cell *matHeaderCellDef> Repeats </th>
         <td mat-cell *matCellDef="let node">
             {{node.item.repeats}}
         </td>
     </ng-container>
 
     <ng-container matColumnDef="fhir">
-        <th mat-header-cell *matHeaderCellDef class="link-col"> </th>
+        <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let node" >
             <button matTooltip="View source" matTooltipClass="mat-tooltip-white"  mat-icon-button (click)="showCode(node.item)">
                 <mat-icon>code</mat-icon>
